--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Lingua::ManagementSpeak.
 
-0.01  Thu Apr  7 10:28:40 2005
-	- original version; created by h2xs 1.23 with options
-		-XA -n Lingua::ManagementSpeak
+0.01    Thu Apr  7 10:28:40 2005
+        Original version
+
+0.02    Sun Aug 10 00:54:50 PDT 2014
+        Updated code style
